@@ -5,6 +5,7 @@
 Version 1.0.5 to be released
 ----------------------------
 - Bug #234: Multi-line Yii::t() not found by 'yiic message' (Qiang)
+- Bug #235: Dynamic content does not work when page caching is used together with fragment caching (Qiang)
 - Bug #239: Syntax error in translated Portuguese error view file (Qiang)
 - Bug #246: Undefined variable in CMaskedTextField (Qiang)
 - Bug #252: mimeTypes.php contains clashing types (Qiang)
